ecmascript/parser/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer2/input.ts.stderr
error: Expected ], got :
 --> $DIR/tests/typescript-errors/tsc/classes/indexMemberDeclarations/privateIndexer2/input.ts:4:15
  |
4 |     private [x: string]: string;
  |               ^

